--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "authorisation",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start": "webpack serve --mode development --open",
+    "dev": "cross-env NODE_ENV=development webpack --mode development",
+    "build": "npm run clean && cross-env NODE_ENV=production URL_PATH='authorisation-project/' webpack --mode production",
+    "start": "cross-env NODE_ENV=development  webpack serve --mode development --open",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d build",
+    "clean": "rimraf build"
   },
   "author": "I Latyipov <ildar.latipov@gmail.com>",
   "license": "ISC",
@@ -19,10 +20,12 @@
     "@babel/preset-react": "^7.16.7",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
     "dotenv": "^16.0.0",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
