--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "authorisation-proj",
+  "name": "authorization-proj",
   "version": "1.0.0",
-  "description": "authorisation",
+  "description": "authorization",
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "build": "npm run clean && cross-env NODE_ENV=production URL_PATH='authorisation-project/' webpack --mode production",
+    "build": "npm run clean && cross-env NODE_ENV=production URL_PATH='authorization-project/' webpack --mode production",
     "start": "cross-env NODE_ENV=development  webpack serve --mode development --open",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "clean": "rimraf build"
+    "clean": "rimraf build",
+    "lint": "eslint \"src/**/*.{js,jsx}\"",
+    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix"
   },
   "author": "I Latyipov <ildar.latipov@gmail.com>",
   "license": "ISC",
@@ -23,6 +25,12 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.6.0",
     "dotenv": "^16.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.2.0",
+    "eslint-plugin-react": "^7.29.4",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "rimraf": "^3.0.2",
