--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "gh-pages -d build",
     "clean": "rimraf build",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix"
+    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
+    "prettier": "prettier  --write ."
   },
   "author": "I Latyipov <ildar.latipov@gmail.com>",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "css-loader": "^6.6.0",
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-react": "^7.29.4",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.69.1",
