--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean": "rimraf build",
     "lint": "eslint \"src/**/*.{js,jsx}\"",
     "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
-    "prettier": "prettier  --write ."
+    "prettier": "prettier  --write .",
+    "prepare": "husky install"
   },
   "author": "I Latyipov <ildar.latipov@gmail.com>",
   "license": "ISC",
@@ -35,6 +36,7 @@
     "eslint-plugin-react": "^7.29.4",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
