renamed const and let

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_FIREBASE_STORAGE_BUCKET = my-learning-project-b7c60.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 141827031799
 REACT_APP_FIREBASE_APP_ID = 1:141827031799:web:3e02430d3222ef11ef09f2
 REACT_APP_FIREBASE_MEASUREMENT_ID = G-W6H9ZBWXC9
+REACT_APP_BASIC_API_CAT_FACTS_URL = https://cat-fact.herokuapp.com/facts/
