--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "husky": "^8.0.1",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "webpack": "^5.69.1",
+    "webpack": "^5.74.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
   },
