--- a/package.json
+++ b/package.json
@@ -48,6 +48,10 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.17.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.12",
     "@reduxjs/toolkit": "^1.7.2",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
