--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@mui/material": "^5.10.12",
     "@reduxjs/toolkit": "^1.7.2",
     "firebase": "^9.6.7",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
