--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,13 @@
     "allowSyntheticDefaultImports": true,
     "jsx": "react", // use typescript to transpile jsx to js
     "target": "es5", // specify ECMAScript target version
-    "allowJs": true, // allow a partial TypeScript and JavaScript codebase
+    "allowJs": false, // allow a partial TypeScript and JavaScript codebase
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"],
       "@pages/*": ["App/pages/*"],
       "@components/*": ["App/components/*"],
-      "@api-helpers/*": ["App/components/api-helpers/*"]
+      "@api-helpers/*": ["App/apiHelpers/*"]
     }
   },
   "include": ["./src/"]
