--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "clean": "rimraf build",
-    "lint": "eslint \"src/**/*.{js,jsx}\"",
-    "lint:fix": "eslint \"src/**/*.{js,jsx}\" --fix",
+    "lint": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
+    "lint:fix": "eslint \"src/**/*.{ts,tsx,js,jsx}\" --fix",
     "prettier": "prettier  --write .",
     "prepare": "husky install"
   },
@@ -22,6 +22,8 @@
     "@babel/plugin-transform-runtime": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
@@ -59,6 +61,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "firebase": "^9.6.7",
+    "mobx": "^6.9.0",
+    "mobx-react-lite": "^3.4.3",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
